--- a/style.css
+++ b/style.css
@@ -387,3 +387,17 @@ ul.list-tight li { margin: 8px 0; }
 .scholar-link-inline:hover .scholar-icon {
   opacity: 0.7;
 }
+.year-divider {
+  font-size: 1.5em;
+  color: #555;
+  border-bottom: 2px solid #ddd;
+  padding-bottom: 0.3em;
+  margin-top: 2em;
+  margin-bottom: 1em;
+}
+
+/* 暗色模式适配 */
+body.dark-mode .year-divider {
+  color: #aaa;
+  border-bottom-color: #444;
+}
